--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,10 +53,11 @@ dependencies {
 
     //view related libs
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-    implementation "androidx.cardview:cardview:1.0.0"
 
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+
+    implementation "androidx.cardview:cardview:1.0.0"
 
 
     //networking
